--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -12,6 +12,7 @@
     <!-- Title -->
     <h2>LINE Things Starter</h2>
     <hr />
+    <p id="userId"></p>
     <p>
       <img id="loading-animation" class="" src="loading.gif" height="14px" />
       <span id="status" class="inactive">Device disconnected</span>
