--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -13,6 +13,7 @@
     <h2>LINE Things Starter</h2>
     <hr />
     <p id="userId"></p>
+    <p id="displayName"></p>
     <p>
       <img id="loading-animation" class="" src="loading.gif" height="14px" />
       <span id="status" class="inactive">Device disconnected</span>
