--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -1,8 +1,10 @@
 <html>
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <script src=" https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff.js"></script>
     <link rel="stylesheet" type="text/css" href="liff.css" />
@@ -10,8 +12,11 @@
 
   <body>
     <!-- Title -->
-    <h2>LINE Things Starter</h2>
-    <hr />
+    <div style="background-color: #B3A29A;padding: 20px;">
+      <img src="safidence.png" height="10%"/>
+    </div>
+
+    <hr style="margin: 0px;" />
     <p id="userId"></p>
     <p id="displayName"></p>
     <p>
@@ -37,7 +42,9 @@
         <tr>
           <th class="device-info-cell device-info-key">Button state</th>
           <td class="device-info-cell device-info-val">
-            <button id="btn-state" class="btn btn-state" disabled>Released</button>
+            <button id="btn-state" class="btn btn-state" disabled>
+              Released
+            </button>
           </td>
         </tr>
         <tr>
@@ -45,13 +52,19 @@
           <td class="device-info-cell device-info-val" id="click-count">0</td>
         </tr>
       </table>
+
       <hr />
       <!-- Toggle LED -->
       <p>
-        <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">Switch LED ON</button>
+        <button
+          id="btn-led-toggle"
+          class="btn btn-led-toggle"
+          onclick="handlerToggleLed()"
+        >
+          Switch LED ON
+        </button>
       </p>
       <hr />
     </div>
   </body>
-
 </html>
