--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -31,6 +31,10 @@
           <th class="device-info-cell device-info-key">Name</th>
           <td class="device-info-cell device-info-val" id="device-name"></td>
         </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">residentialName</th>
+          <td class="device-info-cell device-info-val" id="residential-name"></td>
+        </tr>
       </table>
 
       <hr />
