--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -32,8 +32,7 @@
           <td class="device-info-cell device-info-val" id="device-name"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">residentialName</th>
-          <td class="device-info-cell device-info-val" id="residential-name"></td>
+          <td colspan="2" class="device-info-cell device-info-key">สามารถเปิด/ปิดไฟได้แล้ว!</td>
         </tr>
       </table>
 
