--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <!-- Title -->
-    <div style="background-color: #B3A29A;padding: 20px;">
+    <div style="background-color: #CFE4F4;padding: 20px;">
       <img src="safidence.png" height="10%" />
     </div>
     <p id="displayName"></p>
