--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -28,7 +28,7 @@
           class="btn btn-led-toggle"
           onclick="handlerToggleLed()"
         >
-          Switch LED ON
+        เปิดประตู
         </button>
       </p>
     </div>
